<resources>
    <string name="app_name">Sailboat Tracker</string>
    <string name="show_map_but">Show map</string>
    <string name="app_info_but">App\'s info</string>
    <string name="conn_check">Checking&#8230;</string>
    <string name="inet_conn">Internet connection:</string>
    <string name="title_activity_maps">Race Map</string>
    <string name="obtaining_race_data">Obtaining the Race data&#8230;</string>
    <string name="show_details">Show Details</string>
    <string name="show_overall">Overall</string>
    <string name="details">Details</string>
    <string name="overall">Overall race</string>
    <string name="kn">kn</string>
    <string name="nm">nm</string>
    <string name="close">Close</string>
    <string name="pos">#</string>
    <string name="name">Name</string>
    <string name="sog">SOG(kn)</string>
    <string name="dtf">DTF(nm)</string>
    <string name="op">Overall points</string>
    <string name="created_by">Created By:</string>
    <string name="creator">Pavels Saikins</string>
    <string name="contacts">Have a word?</string>
    <string name="code">App\'s code:</string>
    <string name="email_address">saikinspav@gmail.com</string>
    <string name="fb_name">/pavels.saikins</string>
    <string name="git_repo_link">/paveloso/SailboatTrackerApp</string>
    <string name="about_short_text">This app represents the data taken from the official race\'s page and the main purpose of this app is to make it simpler and faster to see current race standing and boats positions.\n\nLong story short - unofficial app with the official data.</string>
    <string name="ln_name">/pavels-saikins</string>
</resources>
