<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/about_app_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="@dimen/buttons_all_margins_double"
        android:layout_marginTop="@dimen/buttons_all_margins_double"
        android:layout_marginRight="@dimen/buttons_all_margins_double"
        android:text="@string/about_short_text" />

    <TextView
        android:id="@+id/created_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/buttons_all_margins_double"
        android:text="@string/created_by"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/created_by_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/creator" />

    <TextView
        android:id="@+id/contacts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/buttons_all_margins_double"
        android:text="@string/contacts"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/email_icon"
            android:layout_width="@dimen/about_icons_size"
            android:layout_height="@dimen/about_icons_size"
            android:layout_weight="2"
            app:srcCompat="@drawable/at" />

        <TextView
            android:id="@+id/email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/buttons_all_margins"
            android:layout_weight="1"
            android:text="@string/email_address" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/facebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/fb_icon"
            android:layout_width="@dimen/about_icons_size"
            android:layout_height="@dimen/about_icons_size"
            android:layout_weight="1"
            app:srcCompat="@drawable/fb" />

        <TextView
            android:id="@+id/fb_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/buttons_all_margins"
            android:layout_weight="1"
            android:text="@string/fb_name" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linkedin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ln_icon"
            android:layout_width="@dimen/about_icons_size"
            android:layout_height="@dimen/about_icons_size"
            app:srcCompat="@drawable/lin" />

        <TextView
            android:id="@+id/linkedin_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/buttons_all_margins"
            android:layout_weight="1"
            android:text="TextView" />

    </LinearLayout>

    <TextView
        android:id="@+id/code_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/buttons_all_margins_double"
        android:text="@string/code"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/github"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/git_icon"
            android:layout_width="@dimen/about_icons_size"
            android:layout_height="@dimen/about_icons_size"
            android:layout_weight="1"
            app:srcCompat="@drawable/git" />

        <TextView
            android:id="@+id/git_repo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/buttons_all_margins"
            android:layout_weight="1"
            android:text="@string/git_repo_link" />
    </LinearLayout>
</LinearLayout>