<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainll"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/topll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/body_black"
        android:orientation="vertical"></LinearLayout>

    <LinearLayout
        android:id="@+id/midtopll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/body_light"
        android:orientation="vertical"></LinearLayout>

    <LinearLayout
        android:id="@+id/midbotll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/body_light"
        android:baselineAligned="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15">

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <Button
                    android:id="@+id/showmap_but"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/buttons_all_margins"
                    android:background="@color/app_buttons_red"
                    android:text="@string/show_map_but"
                    android:textColor="@color/app_buttons_text_white"
                    android:onClick="openRaceMap"/>

                <Button
                    android:id="@+id/appsinfo_but"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/buttons_all_margins"
                    android:background="@color/app_buttons_red"
                    android:text="@string/app_info_but"
                    android:textColor="@color/app_buttons_text_white" />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.15">

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/botll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/body_dark"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/inet_conn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="end"
                android:text="@string/inet_conn"
                android:textColor="@color/app_buttons_text_white" />

            <TextView
                android:id="@+id/conn_res"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/conn_check"
                android:textColor="@color/app_buttons_text_white" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>